terraform/alb.tf
resource "aws_alb" "main"{
    name          ="iu-alb"
    internal      = false
    load_balancer_type = "application"
    security_groups = [aws_security_group.alb.id]
    subnets = [aws_subnet.public_az1.id, aws_subnet.public]

    tags = {
        Name = "iu-alb"
    }
    }

resource "aws_lb_target_group" "main" {
    name = "iu-tg"
    port = 80
    protocol = "HTTP"
    vpc_id = aws_vpc.main.id 
   
    health_check {
        healthy_threshold = 2
        unhealthy_threshold = 2
        timeout = 5
        interval = 30 
        path = "/"
        matcher = "200"
    }

    tags ={
        Name = "iu-tg"
    }
}
 resource "aws_lb_listener" "http" {
    load_balancer_arn = aws_lb.main.arn 
    port  = 80
    protocol = "HTTP"

    default_action {
        type  = "forward"
        target_group_arn = aws_lb_target_group.main.arn 
    }
    tags = {
        Name = "iu-listener-http"
    }
 }
